Updates from Overleaf

--- a/paper/0_abstract.tex
+++ b/paper/0_abstract.tex
@@ -1,7 +1,7 @@
 \begin{abstract}
-This work establishes that the Standard Model is not a collection of phenomenological rules, but is the unique thermal equilibrium state of a persistent information substrate, complementing the paradigm of gauge symmetry with the principle of entropic minimization.
+This work define the Entropic Action $\Phi_{drag}[\psi] = \xi \cdot \mathbf{K}[\psi] \cdot \lambda_{flux}[\psi]$ which is shown to be the Information-Theoretic Dual to the Euclidean Action of Lattice Field Theory, deriving the Principle of Least Action from persistence requirements rather than postulating it.
 
-By modeling the vacuum as a discrete, finite-capacity information processing system (an $E_8$ lattice projected onto spacetime), we demonstrate that the terms of the Standard Model Lagrangian: Yang-Mills kinetics, Dirac propagators,  the Higgs potential, and the Einstein-Hilbert actionare not arbitrary axioms, but the unique operational requirements for an information substrate to maintain Unitarity, Causality, and Finiteness.
+We derive the Entropic Lagrangian as the unique thermal equilibrium state of a persistent information substrate. The Entropic Lagrangian contains both the terms of the Standard Model Lagrangian: Yang-Mills kinetics, Dirac propagators, the Higgs potential, and the Einstein-Hilbert action. These are not arbitrary axioms, but the unique operational requirements for an information substrate to maintain Unitarity, Causality, and Finiteness.
  
 We derive each term of the Standard Model Lagrangian as a necessary component of the lattice's self-regulation against entropic decay. The gauge kinetic term emerges as the cost of maintaining coordination across nodes; the Dirac operator as the protocol for chiral information propagation; the Higgs potential as the boundary stabilizer enforcing topological closure; and the Einstein-Hilbert term as the bulk capacity regulator.
 
