--- a/paper/1_introduction.tex
+++ b/paper/1_introduction.tex
@@ -1,27 +1,30 @@
 \section{Introduction}
-The Standard Model Lagrangian is one of the most successful mathematical structures in physics, predicting phenomena from atomic spectra to collider cross-sections with extraordinary precision. Yet this success masks a deep conceptual puzzle: \textit{why does nature choose this specific Lagrangian?}
+The Standard Model Lagrangian is one of the most successful mathematical structures in physics, predicting phenomena from atomic spectra to collider cross-sections with extraordinary precision. Yet this success masks a deep conceptual puzzle: \textit{why does nature choose this specific Lagrangian?}  
+ Standard QFT further postulates the gauge group, renormalizability and parameter set $\mathcal{P} = \{g, \lambda, m, v\}$.
 
-In conventional Quantum Field Theory, the Standard Model is constructed by imposing local gauge invariance under SU(3)$\times$SU(2)$\times$U(1) and demanding renormalizability. The resulting Lagrangian with its Yang-Mills kinetic terms, Dirac operators, Higgs potentials, and Einstein-Hilbert action is justified by its empirical success, but its form is postulated rather than derived. We are left with a collection of terms that \textit{work}, but no fundamental principle explaining why these terms, and not others, must exist.
-
-This paper reverses the order of construction. Rather than beginning with symmetries and fitting a Lagrangian to match observations, we start with a single principle: \textbf{the vacuum must minimize its Entropic Action to persist}. By treating the universe as a discrete, finite-capacity information-processing substrate (the E8 lattice established in Informational Energetics: A Universal Architecture of Persistence\cite{meyer_ie_2026}), we demonstrate that the Standard Model Lagrangian is not one possible action among many, but is the \textit{unique} solution to a variational problem of persistence.
+This paper reverses the order of construction. We start with a single principle: \textbf{the vacuum must minimize its Entropic Action to persist} and apply it to the $E_8$ substrate derived in the companion paper \textit{Informational Energetics}\cite{meyer_ie_2026} to determine the \textit{unique} Lagrangian solution.
 
 \subsection{\texorpdfstring{$E_8$}{E8}-Persistence theory: A Brief Review}
 
-In the companion paper \textit{Informational Energetics}, we established that any persistent system must satisfy the universal architectural of persistence: Capacity, Map, Protocol, Governor, Toll, and  Margin.
+In \textit{Informational Energetics}, we established that any persistent system must satisfy the universal architectural of persistence: Capacity, Map, Protocol, Governor, Toll, and  Margin.
 
-We mapped IE to physics, treating the vacuum not as a void but as a persistent system. ``System 0'' provides the specific architectural constraints (Finiteness, Unitarity, Causality) of maintaining structural coherence against entropy. Through a sequence of constraints that eliminates all but a single unique solution for the substrate of reality we derived that the substrate must be an $E_8$ lattice projected onto spacetime. The $E_8$ lattice, whose projection onto a causal $4D$ manifold is accompanied by a set of four immutable integers derived with no free parameters: The Characteristic Integers, $\mathbb{S} = \{ \Delta=43, \nu=16, \sigma=5, \chi=2 \}$.
+We mapped IE to physics, treating the vacuum not as a void but as a persistent system. ``System 0'' provides the specific architectural requirements (Finiteness, Unitarity, Causality) of maintaining structural coherence against entropy. Through a sequence of constraints that eliminates all but a single unique solution for the substrate of reality we derived that the substrate must be an $E_8$ lattice projected onto spacetime accompanied by a set of four immutable integers: The Characteristic Integers, $\mathbb{S} = \{ \Delta=43, \nu=16, \sigma=5, \chi=2 \}$.
 
 \subsection{Deriving the Lagrangian}
-We derive each term of $\mathcal{L}_{\text{SM}}$ by mapping the Six Pillars of Persistence onto field-theoretic operators:
+The Entropic Action $S_\Phi = \int d^4x \, \mathcal{L}_\Phi$ is the Information-Theoretic Dual to the Euclidean Action of Lattice Field Theory. Rather than postulating the Principle of Least Action and 
+deriving equations of motion, we derive the action itself from persistence requirements the Principle of Least Action emerges as a consequence of the Persistence Principle rather than an axiom of mechanics.
 
+We apply this framework with the $E_8$ lattice and the IE requirements to derive the Effective Lagrangian containing the Standard Model Lagrangian and gravity. 
+
+We demonstrate that the requirement to satisfy all six pillars simultaneously yields the Lagrangian uniquely.
+
+This derivation carries two structural consequences absent from standard QFT:
 \begin{itemize}
-    \item The \textbf{Higgs potential ($CAP + GOV$)} ($|D_\mu\phi|^2 - V(\phi)$) emerges as the boundary stabilizer enforcing topological closure.
-    \item The \textbf{Dirac operator ($MAP$)} ($\bar{\psi}i\gamma^\mu D_\mu\psi$) emerges as the protocol for chiral information propagation.
-    \item The \textbf{gauge kinetic term ($PRO$)} ($-\frac{1}{4}F_{\mu\nu}F^{\mu\nu}$) emerges as the entropic cost of maintaining coordination across lattice nodes.
-    \item The \textbf{Einstein-Hilbert action ($TOL + MAR$)} ($\frac{M_P^2}{2}R$) emerges as the bulk capacity regulator.
+    \item Exactly two stable configurations exist: $K\to 0$ giving massless carriers, $K\cdot\lambda\to0$ giving topological knots and these are precisely the boson and fermion sectors.
+    \item The UV completion. Standard QFT needs renormalization because it assumes infinite channel capacity. The claim here is that $\nu=16$ acts as a physical cutoff, making renormalization a description of scale-dependent resolution rather than a foundational procedure. This is a structural statement about why the theory is finite, not a computational trick.
 \end{itemize}
 
-This is not model-building. This is a proof that, given the constraints of Unitarity, Causality, and Finiteness on a discrete substrate, the Standard Model Lagrangian is \textit{inevitable}.
+The parameters of the Lagrangian are outputs not inputs. $g, \lambda_H, m, v$ are calculated from $\mathbb{S}$ in the subsequent paper GCA. The Lagrangian paper establishes the form; GCA fills in the values. Together the claim is that the Standard Model Lagrangian has zero free parameters.
 
 To validate this claim, we perform ab initio lattice simulations governed solely by information conservation laws. We demonstrate that General Relativity (with vacuum stiffness $\kappa = 1.000000$), the Dirac equation, and Lorentz invariance ($c_{\text{eff}} = 1.000000$) emerge dynamically from a cellular automaton with no field-theoretic input—confirming that the continuous field theory we observe is the hydrodynamic limit of a discrete, information-theoretic substrate.
 
