--- a/paper/_main.tex
+++ b/paper/_main.tex
@@ -50,10 +50,17 @@
 
 % Main Content
 \input{paper/1_introduction}
-\input{paper/2_action}
-\input{paper/3_validation}
-\input{paper/4_emergent_dynamics}
-\input{paper/5_conclusion}
+\input{paper/2_dirac_propagator}
+\input{paper/3_guage_field_sync}
+\input{paper/4_higgs}
+
+\input{paper/5_}
+\input{paper/5_action}
+
+\input{paper/5_audit}
+\input{paper/6_sim}
+
+\input{paper/7_conclusion}
 
 \appendix
 
