Updates from Overleaf

--- a/paper/0_abstract.tex
+++ b/paper/0_abstract.tex
@@ -1,5 +1,5 @@
 \begin{abstract}
-This work define the Entropic Action $\Phi_{drag}[\psi] = \xi \cdot \mathbf{K}[\psi] \cdot \lambda_{flux}[\psi]$ which is shown to be the Information-Theoretic Dual to the Euclidean Action of Lattice Field Theory, deriving the Principle of Least Action from persistence requirements rather than postulating it.
+This work defines the Entropic Action $\Phi_{drag}[\psi] = \xi \cdot \mathbf{K}[\psi] \cdot \lambda_{flux}[\psi]$ which is shown to be the Information-Theoretic Dual to the Euclidean Action of Lattice Field Theory, deriving the Principle of Least Action from persistence requirements rather than postulating it.
 
 We derive the Entropic Lagrangian as the unique thermal equilibrium state of a persistent information substrate. The Entropic Lagrangian contains both the terms of the Standard Model Lagrangian: Yang-Mills kinetics, Dirac propagators, the Higgs potential, and the Einstein-Hilbert action. These are not arbitrary axioms, but the unique operational requirements for an information substrate to maintain Unitarity, Causality, and Finiteness.
  
