--- a/paper/5_higgs.tex
+++ b/paper/5_higgs.tex
@@ -1,4 +1,6 @@
 \section{Derivation C: The Scalar Governor (Lattice Stability)}
+\label{sec:higgs}
+
 
 Finally, we must derive the mechanism that stabilizes the lattice geometry itself. In the Universal Architecture, the \textbf{Governor} pillar is required to prevent the system from diverging (Causal Disconnect) or collapsing (Singularity).
 
