--- a/paper/8_sim.tex
+++ b/paper/8_sim.tex
@@ -54,6 +54,6 @@ The simulation (Fig. \ref{fig:water_audit}) confirms that the discrete substrate
 \begin{figure}[h]
 \centering
 \includegraphics[width=0.48\textwidth]{calculations/lattice_water_audit.png}
-\caption{\textbf{The Geometry of Chemistry.} A numerical simulation of the $H_2O$ molecular orbital on the $E_8$ substrate. The image visualizes the phase-density map of the spinor field after 1000 time steps. Note the spontaneous formation of \textbf{Flux Bridges} (Covalent Bonds) connecting the nuclei. This demonstrates that ``chemical bonding" is not a separate physical law, but the inevitable result of the electron fluid minimizing entropic action across the geometric impedance of the lattice potential.}
+\caption{\textbf{The Geometry of Chemistry.} A numerical simulation of the $E_8$ substrate with mass in location similar to an $H_2O$ molecule. The image visualizes the phase-density map of the spinor field after 1000 time steps. Note the spontaneous formation of \textbf{Flux Bridges} (Covalent Bonds) connecting the ``nuclei''. This demonstrates that ``chemical bonding'' is not a separate physical law, but the inevitable result of the electron fluid minimizing entropic action across the geometric impedance of the lattice potential.}
 \label{fig:water_audit}
 \end{figure}
