--- a/paper/_main.tex
+++ b/paper/_main.tex
@@ -4,6 +4,7 @@
 \usepackage{amsmath, amssymb, bm}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{slashed}
 
 % Tables & Formatting
 \usepackage{booktabs, tabularx, array}
@@ -50,17 +51,19 @@
 
 % Main Content
 \input{paper/1_introduction}
-\input{paper/2_dirac_propagator}
-\input{paper/3_guage_field_sync}
-\input{paper/4_higgs}
+\input{paper/2_action}
+\input{paper/3_dirac}
+\input{paper/4_guage_field}
+\input{paper/5_higgs}
+\input{paper/6_spactime}
 
-\input{paper/5_}
-\input{paper/5_action}
+\input{paper/7_effective_entropic_lagrangian}
 
-\input{paper/5_audit}
-\input{paper/6_sim}
+\input{paper/8_audit}
+\input{paper/8_sim}
 
-\input{paper/7_conclusion}
+\input{paper/9_falsifiability}
+\input{paper/10_conclusion}
 
 \appendix
 
